# Projeto_dataset_breast_cancer

./: Análise Exploratória dos dados.ipynb  EDA_breast_cancer.ipynb  Modelling.ipynb  README.MD  pyproject.toml  util.py
models/: logRegression_070924.pkl
