[tool.poetry]
name = "breast-cancer-sklearn"
version = "0.1.0"
description = ""
authors = ["João Nepomuceno <--->"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.1"
jupyter = "^1.1.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
